# bssl-cmake-sys

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY  build.rs  incorporate.sh  wrapper.h
.github/workflows/: ci.yml
patches/: windows-crt.diff
src/: lib.rs
