[package]
name = "bssl-cmake-sys"
version = "0.1.2403260"
license = "Apache-2.0"
edition = "2021"
description = "FFI bindings to BoringSSL (cmake incorporated)"
repository = "https://github.com/zh-jq/bssl-cmake-sys.git"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]

#
links = "bssl"

#
exclude = [
    "*.go",
    "*.png",
    "*_test.cc",
    "*_tests.txt",
    "/boringssl/",
    "/third_party/boringssl/crypto_test_data.cc",
    "/third_party/boringssl/src/crypto/cipher_extra/test/",
    "/third_party/boringssl/src/crypto/fipsmodule/bn/test/",
    "/third_party/boringssl/src/crypto/fipsmodule/policydocs/",
    "/third_party/boringssl/src/crypto/hpke/test-vectors.json",
    "/third_party/boringssl/src/crypto/spx/*.txt",
    "/third_party/boringssl/src/crypto/test/",
    "/third_party/boringssl/src/crypto/x509/test/",
    "/third_party/boringssl/src/decrepit/",
    "/third_party/boringssl/src/fuzz/",
    "/third_party/boringssl/src/pki/",
    "/third_party/boringssl/src/rust/",
    "/third_party/boringssl/src/ssl/test/",
    "/third_party/boringssl/src/third_party/googletest/",
    "/third_party/boringssl/src/third_party/wycheproof_testvectors/",
    "/third_party/boringssl/src/util/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
cmake = "0.1"
