[package]
name = "bssl-cmake-sys"
version = "0.1.2406170"
license = "Apache-2.0"
edition = "2021"
description = "FFI bindings to BoringSSL (cmake incorporated)"
repository = "https://github.com/zh-jq/bssl-cmake-sys.git"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]

#
links = "bssl"

#
exclude = [
    "*.go",
    "*.png",
    "*_test.cc",
    "*_tests.txt",
    "/boringssl/crypto/cipher_extra/test/",
    "/boringssl/crypto/fipsmodule/bn/test/",
    "/boringssl/crypto/fipsmodule/policydocs/",
    "/boringssl/crypto/hpke/test-vectors.json",
    "/boringssl/crypto/spx/*.txt",
    "/boringssl/crypto/test/",
    "/boringssl/crypto/x509/test/",
    "/boringssl/decrepit/",
    "/boringssl/fuzz/",
    "/boringssl/pki/",
    "/boringssl/rust/",
    "/boringssl/ssl/test/",
    "/boringssl/third_party/googletest/",
    "/boringssl/third_party/wycheproof_testvectors/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
cmake = "0.1"
